Changelog
=========

Release 0.11.1
--------------
* Added STIX elements, Incidents, Threat Actor, Campaign, Course of Action, TTP, exploit Targets to database schema
* Changed models to be more STIX like
* New class structure and output
* New assembler and merger
* Fixed administration interface bugs
* Relations can be found via groupings

Release 0.11.0
--------------
* Basic Authentication support
* Code re-factoring
* New DB Objects, more adapted to STIX
* Removed unused files
* Web-client uses AngularJS
* Redesign of front-end
* Simplified handlers
* Handlers have a separate configuration file
* Added View Types for attributes to decouple view and API
* The interfaces accesses the API (the GUI now can be turned off)
* Modify events via REST API: object/attribute add/remove/edit
* submit proposals for adding objects/attributes via REST
* Enhanced ACL, for admins and users
* Enhanced relation finder (Similar attributes can be grouped, but still the relation is done by ==)
* Review right management (REL_0.10.0+)
* STIX support for everything except Cause of Actions
* Operators for Observables (Composed Observables)
* Genuine MISP v2.x integration of push/pull requests
* CybOX naming convention
* Synchronization between ce1sus instances
* Web-interface sync-server management (MISP and ce1sus)
* Mail notifications
* Attributes/Objects/Observables additionally can be shared via TLP level

Release 0.10.3
--------------
* Bug Fixes
  - Encoding issues take 2
  - Relations are shown only once
* Relations detail view changed:
  - Attributes values are regrouped, however the feature of data-tables is currently unavailable

Release 0.10.2
--------------
* Bug Fixes
  - Editing IOC, share is taken into account
  - Object view:
    - Add buttons are shown to non owners
    - Displaying issues for non owners
  - Fixed display issues for event titles
  - User adding/editing
* Admins can change the event owner groups
* Rest throws new custom messages for
  - double UUIDs